# ContextQwen

./: .gitignore  README.md  architecture.md  pyproject.toml  research.md
benchmarks/: api_backend.py  fact_recall_compare.py  fact_recall_reasoned_cli_smoke.json  linked_hard_reasoned_cli_smoke.json  linked_longform_answer_audit_strict.json  linked_longform_audit.json  linked_longform_benchmark.py  linked_longform_dataset.json  linked_longform_fairness_qwen3_0_6b.json  linked_longform_fairness_qwen3_4b.json  linked_longform_hard_benchmark.py  linked_longform_hard_smoke_qwen3_0_6b.json  linked_longform_results_fair_strict.json  linked_longform_results_qwen3_0_6b.json  linked_longform_results_qwen3_0_6b_v2.json  linked_longform_results_qwen3_0_6b_v3.json  linked_longform_results_qwen3_0_6b_vs_4b.json  linked_longform_results_qwen3_4b_postcorr_on.json  longbench_three_way_smoke.json  longbench_v2_compare.py  longbench_v2_compare_results.json  longbench_v2_compare_results_progress_check.json  longbench_v2_compare_results_v10.json  longbench_v2_compare_results_v10_clean.json  longbench_v2_compare_results_v10_qwen06_same_model.json  longbench_v2_compare_results_v2.json  longbench_v2_compare_results_v5.json  longbench_v2_memory_only.py  longbench_v2_three_way_compare.py  mrcr_compare.py  qwen35_08b_fact_smoke.json  qwen35_08b_fact_v10_same_model.json  qwen35_08b_linked_hard_same_model.json  qwen35_08b_linked_regular_same_model.json  qwen35_08b_longbench_latency_clean.json  qwen35_08b_longbench_reasoned_smoke.json  qwen35_08b_longbench_smoke.json  (+41 more)
examples/: simulation.py
(+21 files in other folders)
